# gamescope-lite

./: .editorconfig  .gitmodules  README.md  meson.build  meson.options  meson_options.txt
protocol/: meson.build
src/: GamescopeVersion.h.in  Timeline.cpp  backend.cpp  backend.h  backends.h  color_helpers.cpp  color_helpers.h  commit.cpp  commit.h  constants_include.hpp  convar.cpp  convar.h  convar_script.cpp  drm_include.h  hdmi.h  log.cpp  log.hpp  main.cpp  main.hpp  mangoapp.cpp  meson.build  pipewire.cpp  rendervulkan.cpp  rendervulkan.hpp  reshade_effect_manager.cpp  reshade_effect_manager.hpp  sdlscancodetable.hpp  steamcompmgr.cpp  steamcompmgr.hpp  steamcompmgr_shared.hpp  vblankmanager.cpp  vblankmanager.hpp  vulkan_include.h  waitable.h  wlserver.cpp  wlserver.hpp  xwayland_ctx.hpp
src/Backends/: DeferredBackend.h  HeadlessBackend.cpp  SDLBackend.cpp  WaylandBackend.cpp
src/Utils/: Directives.h  Process.cpp  TempFiles.cpp  TempFiles.h  Version.cpp  rdb.cpp  rdb.hpp  stb_image_impl.c  stb_image_resize_impl.c  stb_image_write_impl.c  xdg_helper.hpp
src/WaylandServer/: GamescopeActionBinding.h  LinuxDrmSyncobj.h  Reshade.h  WaylandDecls.h  WaylandProtocol.h  WaylandResource.h  WaylandServerLegacy.h
src/backend/sdl/: sdl_action.cpp  sdl_action.hpp  sdl_backend.cpp  sdl_backend.hpp  sdl_connector.cpp  sdl_connector.hpp  sdl_gui.cpp  sdl_gui.hpp  sdl_thread.cpp
src/backend/sdl/event/: custom.cpp  custom.hpp  input.cpp  input.hpp  ui.cpp  ui.hpp  window.cpp  window.hpp
src/core/: console.cpp  console.hpp  convar.cpp  convar.hpp  gamescopereaper.cpp  log.cpp  log.hpp  meson.build  process.cpp  version.cpp  version.hpp.in
src/global/: mangoapp.hpp  steamcompmgr.hpp
src/shaders/: bicubic.h  blit_push_data.h  cs_bicubic.comp  descriptor_set.h  descriptor_set_constants.h
src/shaders/Anime4k/CNN_x2_UL/: cs_anime4k_2x_cnn_ul.comp
src/utils/: meson.build  parse.cpp  parse.hpp
subprojects/: .gitignore  glm.wrap  reshade-fx.wrap  stb.wrap
