option('pipewire', type: 'feature', description: 'Screen capture via PipeWire')
option('rt_cap',                     type: 'feature', description: 'Support for creating real-time threads + compute queues')
option('avif_screenshots',           type: 'feature', description: 'Support for saving .AVIF HDR screenshots')
option('input_emulation' ,           type: 'feature', description: 'Support for XTest/Input Emulation with libei')
option('benchmark', type: 'feature', description: 'Benchmark tools')
