option('pipewire',          type: 'feature', description: 'Screen capture via PipeWire')
option('rt_cap',            type: 'feature', description: 'Support for creating real-time threads + compute queues')
option('screenshot',        type: 'feature', description: 'Support for saving screenshots')
option('avif_screenshots',  type: 'feature', description: 'Support for saving .AVIF HDR screenshots')
option('scripting',         type: 'feature', description: 'Support for lua scripting')
option('headless',          type: 'feature', description: 'Support headless backend')
