option('pipewire',
  description: 'Screen capture via PipeWire',
  type:        'feature',
  value:       'disabled')

option('rt_cap',
  description: 'Support for creating real-time threads + compute queues',
  type:        'feature',
  value:       'disabled')

option('screenshot',
  description: 'Support for saving screenshots',
  type:        'feature',
  value:       'disabled')

option('avif_screenshots',
  description: 'Support for saving .AVIF HDR screenshots',
  type:        'feature',
  value:       'disabled')

option('reshade',
  description: 'Support for ReShadeFX shaders (applied to original app output)',
  type:        'feature',
  value:       'disabled')

option('headless',
  description: 'Support headless backend',
  type:        'feature',
  value:       'disabled')

option('ui',
  description: 'Experimental support for settings ImGui popup',
  type:        'feature',
  value:       'disabled')
